# pepino

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  TEMPLATE_INTEGRATION.md  __init__.py  analysis.py  bot.py  bot_commands.py  core.py  count_values.py  debug_db_init.py  env.example  fetch_messages.py  linkedin_users.json  pyproject.toml  requirements.txt  test_discord_template.py
analysis/: __init__.py  embeddings.py  insights.py  statistics.py  topics.py
archive/: migrate_db.py
archive/test_scripts/: debug_user_search.py  test_analysis.py  test_direct_queries.py  test_fuzzy.py  test_minimal.py  test_simple_search.py  test_timestamp.py
core/: __init__.py  text_processing.py
data/: fetch_state.json
database/: __init__.py  queries.py
docs/: architecture.md  bot_operations.md  development.md  migration.md  operations.md  testing.md
examples/: analysis_data_facade_demo.py  atomic_replacement.py  automation_demo.py  migrate_commands.py  migration_complete_overview.py  migration_overview.py  migration_success_summary.py  quick_db_test.py  quick_template_test.py  real_analyzer_functions_demo.py  scaling_analysis.py  simple_chart_integration_demo.py  simple_command_flow.py  simulate_discord_command.py  standalone_sync_demo.py  sync_analyzer_demo.py  template_chart_integration_demo.py  template_demo.py  template_direct_demo.py  template_integration_demo.py  test_markdown_output.py  test_simple_template.py  test_template_output.py  test_v2_isolated.py  test_v2_simple.py  test_v2_standalone.py  test_v2_system.py
models/: __init__.py  base_analyzer.py  discord_analyzer.py
reports/: legacy_database_20250712_215549.txt  legacy_temporal_20250712_215549.txt  legacy_topics_20250712_215549.txt
reports/legacy/: legacy_database_20250712_223019.txt  legacy_temporal_20250712_223019.txt  legacy_topics_20250712_223019.txt
scripts/: backup_db.py  extract_linkedin_users.py  install_bertopic.py  install_spacy.py  setup_database.py
src/pepino/: __init__.py  __main__.py  config.py  logging_config.py
src/pepino/analysis/: __init__.py  channel_analyzer.py  conversation_analyzer.py  data_facade.py  models.py  utils.py  (+7 more)
tests/: conftest.py
tests/component/: README_component_tests.md  conftest.py  test_analysis_service.py  test_cleanup.py  test_data_operations.py  test_discord_commands.py
tests/test_analysis/: conftest.py  test_channels.py  test_temporal.py  test_topics.py  test_users.py
tests/test_data/: test_channel_model.py  test_channel_repository.py  test_message_repository.py  test_user_repository.py
tests/test_discord/: test_bot.py  test_command_models.py  test_discord_client.py  test_emoji_extractor.py  test_message_extractor.py  test_persistence.py  test_sync_logger.py  test_sync_manager.py
utils/: helpers.py
visualization/: __init__.py  charts.py
(+203 files in other folders)
