[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pepino"
version = "0.1.0"
description = "A comprehensive Discord analytics bot with advanced insights and visualizations"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pepino", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.3.0"
python-dotenv = "^1.0.0"
aiosqlite = "^0.19.0"
asyncpg = "^0.29.0"
numpy = "^1.21.0"
matplotlib = "^3.5.0"
seaborn = "^0.12.0"
scikit-learn = "^1.3.0"
nltk = "^3.8.0"
spacy = "^3.0.0"
sentence-transformers = "^2.2.0"
huggingface-hub = "^0.19.0"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.23.0"
wordcloud = "^1.9.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
click = "^8.2.1"
networkx = "^3.5"
jinja2 = "^3.1.6"
# Enhanced topic modeling with BERTopic
bertopic = "^0.16.0"
umap-learn = "^0.5.3"
hdbscan = "^0.8.33"
# Enhanced embeddings and transformers
transformers = "^4.36.0"
torch = "^2.1.0"
pandas = "^2.3.0"
openpyxl = "^3.1.5"
cachetools = "^6.1.0"
pytest = "^8.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^4.0.0"
pytest-watch = "^4.2.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
pepino = "pepino.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=src/pepino",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["pepino"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "discord.*",
    "matplotlib.*",
    "seaborn.*",
    "sklearn.*",
    "nltk.*",
    "spacy.*",
    "fuzzywuzzy.*",
    "wordcloud.*",
]
ignore_missing_imports = true 